# FLIM-FRET-analysis

./: .gitignore  ComplexWaveletFilter_v1.6.py  ComplexWaveletFilter_v1_6.py  ComplexWaveletFilter_v2_0.py  DATA_EXPLORATION_FEATURES.md  DEBUGGING_GUIDE.md  FLIM_processing_macro_1.ijm  FLIM_processing_macro_2.ijm  FLIM_processing_macro_3.ijm  FLIM_processing_macro_4.ijm  FLIM_processing_macro_5.ijm  GMMSegmentation_v2.6.py  GMMSegmentation_v2_6.py  MANIFEST.in  NEW_ARCHITECTURE.md  README.md  TCSPC_preprocessing_AUTOcal_v2.0.py  TCSPC_preprocessing_AUTOcal_v2_0.py  analyze_bin_files.py  bin_file_analysis_summary.md  bin_to_tiff_converter.py  calibration.csv  calibration_log.xlsx  cleanup_repo.py  config.json  flim_fft_automated.py  flimfret_global.sh  flimfret_launcher.sh  flute_log.txt  flute_logger.py  flute_processing_script.py  install  install.sh  main.py  phasor_visualization.py  process_large_files.py  pyproject.toml  requirements.txt  run_pipeline.py  run_pipeline.py.new  (+10 more)
config/: config.json  config.template.json  flute_commands.json  gmm_config.json
data/: calibration.csv
docs/: ARCHITECTURE_DEEP_DIVE.md  DATA_EXPLORATION_FEATURES.md  DEBUGGING_GUIDE.md  ERROR_TRACKING.md  NEW_ARCHITECTURE.md
scripts/: ComplexWaveletFilter_v2_0.py  FLIM_processing_macro_1.ijm  TCSPC_preprocessing_AUTOcal_v2_0.py  __init__.py  organize_output_files.py  phasor_transform.py  phasor_visualization.py
src/: __init__.py
src/python/: __init__.py  bin_files_to_csv.py  calibration_setup.py  install.py  main.py  setup.py  stitch_tiles.py
src/python/core/: __init__.py  cli.py  config.py  logger.py  pipeline.py  stages.py
src/python/modules/: GMMSegmentation.py  GMMSegmentation_v2_6.py  ManualSegmentFromMask.py  (+24 more)
src/scripts/: requirements.txt  stitched_directory_setup.sh
tests/: run_preprocessing_test.py  simple_bioformats_test.ijm  test_bioformats.ijm  test_dataset_size_comparison.py  test_error_tracking.py  test_flute_with_venv.py  test_imagej.py  test_minimal.py  test_npz_files.py  test_phasor_resolution.py  test_preprocessing.py
(+4 files in other folders)
